tests/out/error/redef/enum.in.bt
enum More {
	base
}

enum More {
	default
}
